--- a/app/src/main/res/layout/settings_advanced_fragment.xml
+++ b/app/src/main/res/layout/settings_advanced_fragment.xml
@@ -66,7 +66,7 @@
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
 
-                <!--<TextView
+                <TextView
                     style="@style/settings_category_font"
                     android:text="@string/advanced_settings_debug_title"
                     android:paddingTop="15dp"
@@ -135,7 +135,7 @@
                     linphone:title="@{@string/advanced_settings_dark_mode_title}"
                     linphone:listener="@{viewModel.darkModeListener}"
                     linphone:selectedIndex="@{viewModel.darkModeIndex}"
-                    linphone:labels="@{viewModel.darkModeLabels}"/>-->
+                    linphone:labels="@{viewModel.darkModeLabels}"/>
 
 
 
@@ -146,7 +146,7 @@
                     linphone:listener="@{viewModel.deviceNameListener}"
                     linphone:defaultValue="@{viewModel.deviceName}"/>
 
-                <!--<include
+                <include
                     layout="@layout/settings_widget_text"
                     linphone:title="@{@string/advanced_settings_remote_provisioning_url_title}"
                     linphone:listener="@{viewModel.remoteProvisioningUrlListener}"
@@ -166,7 +166,7 @@
                     linphone:title="@{@string/advanced_settings_disable_fragment_security_title}"
                     linphone:subtitle="@{@string/advanced_settings_disable_fragment_security_summary}"
                     linphone:listener="@{viewModel.disableSecureFragmentListener}"
-                    linphone:checked="@={viewModel.disableSecureFragment}"/>-->
+                    linphone:checked="@={viewModel.disableSecureFragment}"/>
 
                 <TextView
                     style="@style/settings_category_font"
