add mcx but not 200ok testing normal call is worked,history loaded

--- a/app/src/main/res/layout/dialer_fragment.xml
+++ b/app/src/main/res/layout/dialer_fragment.xml
@@ -36,6 +36,7 @@
             android:layout_centerHorizontal="true"
             android:layout_alignParentTop="true"
             android:padding="10dp"
+            android:onClick="@{ ()->viewModel.startPTT()}"
             android:textAllCaps="true" />
 
         <!--<LinearLayout
