--- a/app/src/main/res/layout/assistant_phone_account_creation_fragment.xml
+++ b/app/src/main/res/layout/assistant_phone_account_creation_fragment.xml
@@ -247,6 +247,7 @@
                     android:gravity="center"
                     android:layout_gravity="top"
                     android:paddingTop="5dp"
+                    android:visibility="gone"
                     android:text="@string/assistant_forgotten_password_link" />
 
             </LinearLayout>
